crates/sverb-tui/src/widgets/snapshots/sverb_tui__widgets__list_tests__t01_scrolled_80x24.snap
---
source: crates/sverb-tui/src/widgets/list_tests.rs
expression: screen
---
┌ Hosts ───────────────────────────────────────────────────────────────────────┐
│  host-06  10.0.0.6                                                           │
│  host-07  10.0.0.7                                                           │
│  host-08  10.0.0.8                                                           │
│  host-09  10.0.0.9                                                           │
│  host-10  10.0.0.10                                                          │
│  host-11  10.0.0.11                                                          │
│  host-12  10.0.0.12                                                          │
│  host-13  10.0.0.13                                                          │
│  host-14  10.0.0.14                                                          │
│  host-15  10.0.0.15                                                          │
│  host-16  10.0.0.16                                                          │
│  host-17  10.0.0.17                                                          │
│  host-18  10.0.0.18                                                          │
│  host-19  10.0.0.19                                                          │
│  host-20  10.0.0.20                                                          │
│  host-21  10.0.0.21                                                          │
│  host-22  10.0.0.22                                                          │
│  host-23  10.0.0.23                                                          │
│  host-24  10.0.0.24                                                          │
│› host-25  10.0.0.25                                                          │
│  host-26  10.0.0.26                                                          │
│  host-27  10.0.0.27                                                          │
└───────────────────────────────────────────────────────────────────── 100/100 ┘
