crates/sverb-tui/src/widgets/snapshots/sverb_tui__widgets__list_tests__t06_detail_160x48.snap
---
source: crates/sverb-tui/src/widgets/list_tests.rs
expression: wide
---
┌ Hosts ───────────────────────────────────────────────────────────────────────────────┐┌ host-01 ─────────────────────────────────────────────────────────────┐
│  host-00  10.0.0.0                                                                   ││address: 10.0.0.1                                                     │
│› host-01  10.0.0.1                                                                   ││id: 1                                                                 │
│  host-02  10.0.0.2                                                                   ││                                                                      │
│  host-03  10.0.0.3                                                                   ││                                                                      │
│  host-04  10.0.0.4                                                                   ││                                                                      │
│  host-05  10.0.0.5                                                                   ││                                                                      │
│  host-06  10.0.0.6                                                                   ││                                                                      │
│  host-07  10.0.0.7                                                                   ││                                                                      │
│  host-08  10.0.0.8                                                                   ││                                                                      │
│  host-09  10.0.0.9                                                                   ││                                                                      │
│  host-10  10.0.0.10                                                                  ││                                                                      │
│  host-11  10.0.0.11                                                                  ││                                                                      │
│  host-12  10.0.0.12                                                                  ││                                                                      │
│  host-13  10.0.0.13                                                                  ││                                                                      │
│  host-14  10.0.0.14                                                                  ││                                                                      │
│  host-15  10.0.0.15                                                                  ││                                                                      │
│  host-16  10.0.0.16                                                                  ││                                                                      │
│  host-17  10.0.0.17                                                                  ││                                                                      │
│  host-18  10.0.0.18                                                                  ││                                                                      │
│  host-19  10.0.0.19                                                                  ││                                                                      │
│  host-20  10.0.0.20                                                                  ││                                                                      │
│  host-21  10.0.0.21                                                                  ││                                                                      │
│  host-22  10.0.0.22                                                                  ││                                                                      │
│  host-23  10.0.0.23                                                                  ││                                                                      │
│  host-24  10.0.0.24                                                                  ││                                                                      │
│  host-25  10.0.0.25                                                                  ││                                                                      │
│  host-26  10.0.0.26                                                                  ││                                                                      │
│  host-27  10.0.0.27                                                                  ││                                                                      │
│  host-28  10.0.0.28                                                                  ││                                                                      │
│  host-29  10.0.0.29                                                                  ││                                                                      │
│  host-30  10.0.0.30                                                                  ││                                                                      │
│  host-31  10.0.0.31                                                                  ││                                                                      │
│  host-32  10.0.0.32                                                                  ││                                                                      │
│  host-33  10.0.0.33                                                                  ││                                                                      │
│  host-34  10.0.0.34                                                                  ││                                                                      │
│  host-35  10.0.0.35                                                                  ││                                                                      │
│  host-36  10.0.0.36                                                                  ││                                                                      │
│  host-37  10.0.0.37                                                                  ││                                                                      │
│  host-38  10.0.0.38                                                                  ││                                                                      │
│  host-39  10.0.0.39                                                                  ││                                                                      │
│  host-40  10.0.0.40                                                                  ││                                                                      │
│  host-41  10.0.0.41                                                                  ││                                                                      │
│  host-42  10.0.0.42                                                                  ││                                                                      │
│  host-43  10.0.0.43                                                                  ││                                                                      │
│  host-44  10.0.0.44                                                                  ││                                                                      │
│  host-45  10.0.0.45                                                                  ││                                                                      │
└───────────────────────────────────────────────────────────────────────────── 100/100 ┘└──────────────────────────────────────────────────────────────────────┘
