crates/sverb-tui/src/widgets/snapshots/sverb_tui__widgets__list_tests__t06_no_detail_80x24.snap
---
source: crates/sverb-tui/src/widgets/list_tests.rs
expression: narrow
---
┌ Hosts ───────────────────────────────────────────────────────────────────────┐
│  host-00  10.0.0.0                                                           │
│› host-01  10.0.0.1                                                           │
│  host-02  10.0.0.2                                                           │
│  host-03  10.0.0.3                                                           │
│  host-04  10.0.0.4                                                           │
│  host-05  10.0.0.5                                                           │
│  host-06  10.0.0.6                                                           │
│  host-07  10.0.0.7                                                           │
│  host-08  10.0.0.8                                                           │
│  host-09  10.0.0.9                                                           │
│  host-10  10.0.0.10                                                          │
│  host-11  10.0.0.11                                                          │
│  host-12  10.0.0.12                                                          │
│  host-13  10.0.0.13                                                          │
│  host-14  10.0.0.14                                                          │
│  host-15  10.0.0.15                                                          │
│  host-16  10.0.0.16                                                          │
│  host-17  10.0.0.17                                                          │
│  host-18  10.0.0.18                                                          │
│  host-19  10.0.0.19                                                          │
│  host-20  10.0.0.20                                                          │
│  host-21  10.0.0.21                                                          │
└───────────────────────────────────────────────────────────────────── 100/100 ┘
